# Co-Working-Space-Management-API

./: .env  Cargo.toml  README.md  request.http
src/: db.rs  main.rs
src/models/: admin.rs  booking.rs  company.rs  employee.rs  mod.rs  player.rs  space.rs  user.rs
src/route/: admin.rs  booking.rs  company.rs  employee.rs  mod.rs  spaces.rs
src/routemount/: route.rs
src/routes/: player.rs  user.rs
src/utils/: errorhandler.rs  jwt.rs  mod.rs
