[package]
name = "axum_rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = {version ="1.48.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.228", features = ["derive"]  }
serde_json = "1.0.145"

sqlx = {version = "0.8.6", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15.7"
bcrypt = "0.17.1"
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"]}
chrono = {version = "0.4.42", features = ["serde"]}
axum-extra = {version = "0.12.2", features =["typed-header"]}
thiserror = "2.0.17"


